# provider-practice-directory-update-pipeline

./: .gitignore  CLAUDE.md  README.md  SUBMISSION.md  pyproject.toml
context/: INFO.md  WRITEUP.md
data/: sample_providers.json
docs/: make_thumbnail.py
docs/superpowers/plans/: 2026-06-17-pipeline-implementation.md
docs/superpowers/specs/: 2026-06-17-pipeline-architecture-design.md
notebooks/: demo.ipynb  demo_executed.ipynb
pipeline/: orchestrator.py  state.py
pipeline/agents/: compare.py  fetch.py  normalize.py  router.py  score.py  staleness.py
pipeline/db/: audit.py  schema.sql  seed.py  store.py
pipeline/normalizers/: address.py  name.py  phone.py
pipeline/sources/: cms.py  nppes.py  website.py
pipeline/sources/board/: florida.py
review/: dashboard.py
tests/: test_fetch.py  test_normalizers.py  test_pipeline.py  test_scoring.py
