[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "provider-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "anthropic>=0.40",
    "scrapling>=0.2",
    "beautifulsoup4>=4.12",
    "rapidfuzz>=3.9",
    "tenacity>=8.3",
    "httpx>=0.27",
    "usaddress>=0.5.10",
    "phonenumbers>=8.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-httpx>=0.30"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "review*"]
